    include a section on the new hook target.
    (Closes: #885994)
  * Dh_Lib.pm: Make it possible to disable the command
    logging by passing "inhibit_log => 1" to the init sub.
    Furthermore, the logging is now only enabled when init
    is called (and not disabled by that option or
    inhibit_log()).  This prevents Dh_Lib from triggering
    a log write just by being loaded.

  [ Thorsten Glaser ]
  * dh_auto_*: Make it possible to disable build systems by
    passing --buildsystem=none.  Previously this would
    require overriding each and every dh_auto_* tool.
    (Closes: #949635)

 -- Niels Thykier <niels@thykier.net>  Sun, 19 Jan 2020 10:43:39 +0000

debhelper (12.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib.pm: Simplify internal loggning of which commands
    have been run.  We are no longer interested in whether
    it was an override target or not.
  * dh: Support "execute_before_X" and "execute_after_X"
    targets in debian/rules.  This is useful for injecting
    commands before or after the command "X" that dh runs.
    Note this feature requires compat 10 or later due to
    internal limitations in debhelper.  Attempts to use
    it in compat 9 will trigger an error.  Thanks to
    Christoph Berg for the suggestion.  (Closes: #885994)
  * dh: Detect and warn about override and hook targets
    for known obsolete commands.  In compat 13, this will
    be an error instead of a warning.
  * dh: Reset umask to 0022 as a consistent default value.
    Thanks to Thorsten Glaser for the suggestion.
    (Closes: #944691)
  * dh_missing: The --fail-missing parameter is now default
    in compat 13.  Thanks to Mattia Rizzolo for the
    suggestion.  (Closes: #917368)
  * dh_installtmpfiles: New command extracted from
    dh_installsystem that will handle tmpfiles.d
    configuration.  Thanks to Michael Biebl for the
    suggestion.  (Closes: #944478)
  * dh_installsystemd: In compat 13, this command will no